# avalokita

./: .gitignore  CMakeLists.txt  COMAKE  README.md  avalokita.deb.control  avalokita.rpm.spec  build.sh
src/: CMakeLists.txt  macros.h  main.c
tools/: encrypt_privkey.sh  gen_ca_certs.sh  sign.sh  update_web_files.sh  verify.sh
